tests/NormalTests/paczka1/fuzzy1/19918785.err
Error in line 3: kb8iLcncpyr A912 8,0
Error in line 4: S926 A519 62,4
Error in line 6: kb8iLcncpyr S926 81,6
Error in line 11: kb8iLcncpyr A519 12,4
Error in line 14: kb8iLcncpyr A912 80,3
Error in line 15: 4LEbhu69vy S866 50,9
Error in line 23: kb8iLcncpyr S866 22,4
Error in line 35: kb8iLcncpyr A5t9 239,8
